02/yaml/deploy/nginx/02_nginx-2_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-2
