02/yaml/deploy/nginx/02_nginx-2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-2 
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: farm.localdev.me
    http:
      paths:
      - backend:
          service:
            name: nginx-2
            port:
              number: 80
        path: /
        pathType: Prefix
